<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserProfileFragment">


    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title_page_profile"
        android:textSize="30dp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile">

        <TextView
            android:id="@+id/tv_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/ll_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">


            <EditText
                android:id="@+id/et_profile_first_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_first_name"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_profile_last_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_last_name"
                android:maxLines="1"
                android:singleLine="true" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_profile_phone"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_contact_number"
            android:maxLines="1"
            android:singleLine="true" />

        <LinearLayout
            android:id="@+id/ll_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/btn_profile_save"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="#FF5722"
                android:text="Change profile"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/v_line1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#606060"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_profile"/>

    <LinearLayout
        android:id="@+id/layout_password_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/v_line1">

        <EditText
            android:id="@+id/et_change_pwd"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_change_confirm_pwd"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password_confirm"
            android:imeActionId="6"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="#3F51B5"
            android:text="CHANGE PASSWORD"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        </LinearLayout>

    <View
        android:id="@+id/v_line2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#606060"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_password_change"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Logout"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_password_change" />

</androidx.constraintlayout.widget.ConstraintLayout>